--- a/style.css
+++ b/style.css
@@ -1,137 +1,136 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    font-family: Lato;
-    background-color: #eee;
+body {
+  font-family: 'Open Sans', sans-serif;
 }
-
-.container{
-    width: 100%;
-    padding: 0 10px;
-    margin: 0 auto;
+.container {
+  width: 100%;
+  padding: 0 10px;
+  margin: 0 auto;
+  background-color: #f0f2f2;
 }
-header{
-    padding: 20px 0;
+header {
+  padding: 20px 0;
 }
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
 }
-aside{
-    background-color: white;
-    padding: 15px;
-    width: 100%;
-    border-radius: 5px;
-    margin-bottom: 10px;
+aside {
+  background-color: white;
+  padding: 15px;
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
-section{
-    width: 100%;
+section {
+  width: 100%;
 }
-aside ul{
-    list-style: none;
+aside ul {
+  list-style: none;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 10px;
+}
+aside h3 {
+  margin-bottom: 20px;
+}
+aside .options {
+  margin-bottom: 20px;
+}
+aside .options h5 {
+  margin-bottom: 10px;
+  text-align: center;
+  border-bottom: 1px solid black;
+  padding-bottom: 5px;
+  color: #666;
+  font-weight: normal;
+}
+aside .options li {
+  width: 100%;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: #5ece5e;
+}
+aside .options li a {
+  cursor: pointer;
+  text-align: center;
+  display: block;
+  font-size: 13px;
+}
+aside .options li.active {
+  background-color: #249f24;
+}
+section #data {
+  display: grid;
+  grid-template-columns: auto;
+  grid-gap: 10px;
+}
+.card {
+  border-radius: 5px;
+  width: 100%;
+  background-color: white;
+  padding: 10px;
+}
+.card .image img {
+  width: 100%;
+  border-radius: 5px;
+  padding: 45px;
+}
+.image {
+  background-color: #8080801c;
+}
+.card .data {
+  padding: 10px 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.card .data span {
+  padding: 9px 0;
+}
+footer {
+  padding: 20px 0;
+  text-align: center;
+}
+.loading, .no-result {
+  display: none;
+  text-align: center;
+  font-size: 40px;
+}
+.loading img {
+  width: 100%;
+  max-width: 400px;
+}
+@media only screen and (min-width: 700px) {
+  main {
+    flex-direction: row;
+  }
+  aside {
+    width: 150px;
+  }
+  section {
+    padding: 0 20px;
+    width: calc(100% - 150px);
+  }
+  section #data {
     display: grid;
     grid-template-columns: auto auto;
     grid-gap: 10px;
+  }
 }
-aside h3{
-    margin-bottom: 20px;
-}
-aside .options{
-    margin-bottom: 20px;
-}
-aside .options h5{
-    margin-bottom: 10px;
-    text-align: center;
-    border-bottom: 1px solid black;
-    padding-bottom: 5px;
-    color: #666;
-    font-weight: normal;
-}
-aside .options li{
-    width: 100%;
-    border-radius: 5px;
-    padding: 5px;
-    background-color:#5ece5e ;
-}
-aside .options li a{
-    cursor: pointer;
-}
-aside .options li.active{
-    background-color:#249f24 ;
-}
-
-section #data{
-    display: grid;
-    grid-template-columns: auto ;
-    grid-gap: 10px;
-}
-.card{
-    border-radius: 5px;
-    width: 100%;
-    background-color: white;
-    padding: 10px;
-}
-.card .image img{
-    width:100%;
-    border-radius: 5px;;
-
-}
-
-.card .data{
-    padding: 10px 0;
-    width:100%;
-    display: flex;
-    flex-direction: column;
-}
-.card .data span{
-    padding: 2px 0;
-}
-
-footer{
-    padding: 20px 0;
-    text-align: center;
-}
-
-.loading, .no-result{
-    display: none;
-    text-align: center;
-    font-size: 40px;
-}
-.loading img{
-    width: 100%;
-    max-width: 400px;
-}
-
-@media only screen and (min-width: 700px) {
-    main{
-        flex-direction: row;
-    }
-    aside{
-        width: 150px;
-    }
-    section{
-        padding: 0 20px;
-        width: calc(100% - 150px);
-    }
-    section #data{
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-gap: 10px;
-    }
-}
-
 @media only screen and (min-width: 1024px) {
-    .container{
-        max-width:1440px;
-    }
-    section #data{
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        grid-gap: 10px;
-    }
+  .container {
+    max-width: 1440px;
+  }
+  section #data {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 10px;
+  }
 }
